# pinger

./: .gitignore  Cargo.toml  flake.nix  render_doc_settings.cap
src/: block_shader.wgsl  gpu.rs  gui.rs  main.rs  ping.rs  ping_map.rs  shader.wgsl  ui.rs  view.rs  wgpu_ext.rs
src/view/: pan_zoom.rs  ping_map.rs  renderer.rs  shader.wgsl
