[package]
name = "pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
console-subscriber = "0.1.8"
ipnet = "2.7.2"
iprange = "0.6.7"
surge-ping = { path = "../surge-ping"}
tokio = { version = "1.28.0", features = ["full"] }
